--- a/HW/static/css/main.css
+++ b/HW/static/css/main.css
@@ -1,4 +1,4 @@
-body {
+  body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -13,12 +13,7 @@ body {
     height: 50px;
     background-color: #eee;
   }
-  
-  main {
-    padding-top: 20px;
-    padding-bottom: 50px;
-  }
-  
+
   
   .navbar {
       background-color: #f8f9fa;
@@ -73,6 +68,7 @@ body {
     font-size: 20px;
     font-family: Helvetica;
     font-weight: bold;
+    margin-bottom: 10px;
   }
 
   .question-image-primary {
@@ -83,3 +79,6 @@ body {
    padding: 0;
    margin: 0;
   }
+.program-lang > a {
+ text-decoration: none;
+}
