--- a/askme/templates/layouts/base.html
+++ b/askme/templates/layouts/base.html
@@ -3,7 +3,7 @@
 <html class="h-100" lang="en">
 <meta charset="UTF-8">
 <head>
-    <link rel="stylesheet" type="text/css" href='../static/css/main.css'/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %} "/>
     <meta name="theme-color" content="#7952b3">
 
@@ -25,8 +25,7 @@
     </style>
 
 
-    <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet">
+
   </head>
   <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg p-2">
@@ -98,8 +97,6 @@
 </footer>
 
 
-<script src="/docs/5.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+<script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
