--- a/askme/templates/components/signup_on_nav.html
+++ b/askme/templates/components/signup_on_nav.html
@@ -1,2 +1,4 @@
-<a href="{% url 'login' %}">Log in</a>
-<a href="{% url 'signup' %}">Register</a>
+<div class='d-flex flex-row align-items-center gap-3 p-3'>
+    <a href="{% url 'login' %}">Log in</a>
+    <a href="{% url 'signup' %}">Register</a>
+</div>
