--- a/askme/templates/components/auth_on_nav.html
+++ b/askme/templates/components/auth_on_nav.html
@@ -1,7 +1,9 @@
 {% load static %}
-<img class="avatar" src="{% static '/img/css_ava.svg' %} "/>
-<div>
-    <p class="mb-2">Nikita</p>
-    <a href="">Settings</a>
-    <a href="">Log out</a>
+<div class='d-flex flex-row align-items-center gap-3'>
+    <img class="avatar" src="{% static '/img/css_ava.svg' %} "/>
+    <div>
+        <p class="mb-2">Nikita</p>
+        <a href="{%  url 'settings' %}">Settings</a>
+        <a href="{%  url 'index' %}">Log out</a>
+    </div>
 </div>
