--- a/askme/templates/components/paginator.html
+++ b/askme/templates/components/paginator.html
@@ -1,6 +1,6 @@
 <nav aria-label="..." class="mt-4">
     <ul class="pagination">
-    {% if question_id %}
+    {% if question_id is not None %}
         {% if pages.has_previous %}
         <li class="page-item"><a class="page-link" href="{% url root question_id%}?page={{pages.previous_page_number}}">Previous</a></li>
         {% else %}
@@ -12,9 +12,21 @@
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
         {% endif %}
+    {% elif tag is not None %}
+        {% if pages.has_previous %}
+        <li class="page-item"><a class="page-link" href="{% url root tag%}?page={{pages.previous_page_number}}">Previous</a></li>
+        {% else %}
+        <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
+        {% endif %}
+        <li class="page-item active" aria-current="page"><a class="page-link" href="{% url root tag%}?page={{pages.number}}">{{pages.number}}</a></li>
+        {% if pages.has_next %}
+        <li class="page-item"><a class="page-link" href="{% url root tag%}?page={{pages.next_page_number}}">Next</a></li>
+        {% else %}
+        <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+        {% endif %}
     {% else %}
         {% if pages.has_previous %}
-        <li class="page-item"><a class="page-link" href="{% url root %}?page={{pages.previous_page_number}}">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="{% url root%}?page={{pages.previous_page_number}}">Previous</a></li>
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
         {% endif %}
