--- a/askme/templates/components/comment-item.html
+++ b/askme/templates/components/comment-item.html
@@ -11,11 +11,15 @@
         </div>
         <div class="g-4 d-flex">
             <div class="col-2">
-                <button class="btn btn-primary" data-bs-toggle="button" type="button">Like</button>
+                <button class="btn btn-primary" data-bs-toggle="button" type="button">{{ comment.get_likes_count }}</button>
             </div>
             <div class="col-10">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="6"/>
+                    {% if comment.is_correct == True%}
+                      <input class="form-check-input" type="checkbox" value="" checked>
+                    {% else %}
+                      <input class="form-check-input" type="checkbox" value="" >
+                    {% endif %}
                     <label class="form-check-label">Correct!</label>
                 </div>
             </div>
