--- a/askme/templates/question.html
+++ b/askme/templates/question.html
@@ -21,10 +21,12 @@
             </div>
             <div class="g-4 d-flex">
                 <div class="col-3">
-                    <button class="btn btn-primary" data-bs-toggle="button" type="button">Like</button>
+                    <button class="btn btn-primary" data-bs-toggle="button" type="button">{{ question.get_likes_count }}</button>
                 </div>
                  <div class="col-7 fs-5 program-lang">
-                Tags: <a href="{% url 'tag' tag_name="Python"%}" class="badge bg-primary">Python</a> <a href="{% url 'tag' tag_name="JavaScript"%}" class="badge bg-primary">JavaScript</a>
+                Tags: {% for tag in question.tags.all %}
+                    <a class="badge bg-primary" id="tag-{{forloop.counter}}" href="{% url 'tag' tag_name=tag.name %}">{{tag.name}}</a>
+                {% endfor %}
                 </div>
             </div>
         </div>
