--- a/askme_makarov/templates/question.html
+++ b/askme_makarov/templates/question.html
@@ -1,6 +1,5 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
-
 {% block auth %}
     {% include 'components/auth_on_nav.html' %}
 {% endblock auth %}
@@ -35,8 +34,13 @@
         {% include 'components/comment-item.html' %}
         {% endfor %}
     </div>
+    <hr class="bg-dark border-2 border-top border-dark g-3" />
+    <form>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Enter your answer here" required></textarea>
+        <button type="submit" class="btn btn-primary col-2 g-3 mt-3" >Answer</button>
+    </form>
 </div>
 
-{% include 'components/paginator.html' with root='question' question_id=question.id%}
+{% include 'components/paginator.html' with root='question' param=question.id%}
 
 {% endblock %}
