--- a/askme_makarov/templates/components/paginator.html
+++ b/askme_makarov/templates/components/paginator.html
@@ -1,41 +1,21 @@
-<nav aria-label="..." class="mt-4">
+<nav aria-label="..." class="mt-3">
     <ul class="pagination">
-    {% if param is not None %}
         {% if pages.number != 1 %}
-        <li class="page-item"><a class="page-link" href="{% url root param%}?page=1">1</a></li>
+        <li class="page-item"><a class="page-link" href="{{ root }}?page=1">1</a></li>
         {% endif %}
         {% if pages.has_previous %}
-        <li class="page-item"><a class="page-link" href="{% url root param%}?page={{pages.previous_page_number}}">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="{{ root }}?page={{pages.previous_page_number}}">Previous</a></li>
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
         {% endif %}
-        <li class="page-item active" aria-current="page"><a class="page-link" href="{% url root param%}?page={{pages.number}}">{{pages.number}}</a></li>
+        <li class="page-item active" aria-current="page"><a class="page-link" href="{{ root }}?page={{pages.number}}">{{pages.number}}</a></li>
         {% if pages.has_next %}
-        <li class="page-item"><a class="page-link" href="{% url root param%}?page={{pages.next_page_number}}">Next</a></li>
+        <li class="page-item"><a class="page-link" href="{{ root }}?page={{pages.next_page_number}}">Next</a></li>
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
         {% endif %}
         {% if pages.number != pages.paginator.num_pages %}
-        <li class="page-item"><a class="page-link" href="{% url root param%}?page={{pages.paginator.num_pages }}">{{pages.paginator.num_pages }}</a></li>
+        <li class="page-item"><a class="page-link" href="{{ root }}?page={{pages.paginator.num_pages }}">{{pages.paginator.num_pages }}</a></li>
         {% endif %}
-    {% else %}
-        {% if pages.number != 1 %}
-        <li class="page-item"><a class="page-link" href="{% url root %}?page=1">1</a></li>
-        {%  endif %}
-        {% if pages.has_previous %}
-        <li class="page-item"><a class="page-link" href="{% url root %}?page={{pages.previous_page_number}}">Previous</a></li>
-        {% else %}
-        <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
-        {% endif %}
-        <li class="page-item active" aria-current="page"><a class="page-link" href="{% url root %}?page={{pages.number}}">{{pages.number}}</a></li>
-        {% if pages.has_next %}
-        <li class="page-item"><a class="page-link" href="{% url root %}?page={{pages.next_page_number}}">Next</a></li>
-        {% else %}
-        <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
-        {% endif %}
-        {% if pages.number != pages.paginator.num_pages %}
-        <li class="page-item"><a class="page-link" href="{% url root %}?page={{pages.paginator.num_pages }}">{{pages.paginator.num_pages }}</a></li>
-        {% endif %}
-    {% endif %}
     </ul>
 </nav>
