--- a/askme_makarov/templates/hot.html
+++ b/askme_makarov/templates/hot.html
@@ -15,6 +15,6 @@
 
 {% endfor %}
 
-{% include 'components/paginator.html' with root='hot' %}
+{% include 'components/paginator.html' %}
 
 {% endblock content %}
