--- a/askme_makarov/templates/index.html
+++ b/askme_makarov/templates/index.html
@@ -16,6 +16,6 @@
 
 {% endfor %}
 
-{% include 'components/paginator.html' with root='index' %}
+{% include 'components/paginator.html' %}
 
 {% endblock content %}
