--- a/askme_makarov/templates/question.html
+++ b/askme_makarov/templates/question.html
@@ -36,7 +36,7 @@
     </div>
     <hr class="bg-dark border-2 border-top border-dark g-3" />
 </div>
-{% include 'components/paginator.html' with root=url %}
+{% include 'components/paginator.html' %}
     <form>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Enter your answer here" required></textarea>
         <button type="submit" class="btn btn-primary col-2 g-3 mt-3" >Answer</button>
