--- a/askme_makarov/templates/tag.html
+++ b/askme_makarov/templates/tag.html
@@ -15,6 +15,6 @@
 
 {% endfor %}
 
-{% include 'components/paginator.html' with root=url %}
+{% include 'components/paginator.html' %}
 
 {% endblock content%}
