--- a/askme_makarov/templates/components/paginator.html
+++ b/askme_makarov/templates/components/paginator.html
@@ -1,21 +1,21 @@
 <nav aria-label="..." class="mt-3">
     <ul class="pagination">
         {% if pages.number != 1 %}
-        <li class="page-item"><a class="page-link" href="{{ urls }}?page=1">1</a></li>
+        <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
         {% endif %}
         {% if pages.has_previous %}
-        <li class="page-item"><a class="page-link" href="{{ urls }}?page={{pages.previous_page_number}}">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="?page={{pages.previous_page_number}}">Previous</a></li>
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="">Previous</a></li>
         {% endif %}
-        <li class="page-item active" aria-current="page"><a class="page-link" href="{{ urls }}?page={{pages.number}}">{{pages.number}}</a></li>
+        <li class="page-item active" aria-current="page"><a class="page-link" href="?page={{pages.number}}">{{pages.number}}</a></li>
         {% if pages.has_next %}
-        <li class="page-item"><a class="page-link" href="{{ urls }}?page={{pages.next_page_number}}">Next</a></li>
+        <li class="page-item"><a class="page-link" href="?page={{pages.next_page_number}}">Next</a></li>
         {% else %}
-        <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
+        <li class="page-item disabled"><a class="page-link" href="?page={{pages.next_page_number}}">Next</a></li>
         {% endif %}
         {% if pages.number != pages.paginator.num_pages %}
-        <li class="page-item"><a class="page-link" href="{{ urls }}?page={{pages.paginator.num_pages }}">{{pages.paginator.num_pages }}</a></li>
+        <li class="page-item"><a class="page-link" href="?page={{pages.paginator.num_pages }}">{{pages.paginator.num_pages }}</a></li>
         {% endif %}
     </ul>
 </nav>
