--- a/askme_makarov/templates/components/paginator.html
+++ b/askme_makarov/templates/components/paginator.html
@@ -12,7 +12,7 @@
         {% if pages.has_next %}
         <li class="page-item"><a class="page-link" href="?page={{pages.next_page_number}}">Next</a></li>
         {% else %}
-        <li class="page-item disabled"><a class="page-link" href="?page={{pages.next_page_number}}">Next</a></li>
+        <li class="page-item disabled"><a class="page-link" href="">Next</a></li>
         {% endif %}
         {% if pages.number != pages.paginator.num_pages %}
         <li class="page-item"><a class="page-link" href="?page={{pages.paginator.num_pages }}">{{pages.paginator.num_pages }}</a></li>
