--- a/askme_makarov/templates/layouts/base.html
+++ b/askme_makarov/templates/layouts/base.html
@@ -5,6 +5,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %} "/>
+    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
     <meta name="theme-color" content="#7952b3">
 
 
