--- a/askme_makarov/templates/components/comment-item.html
+++ b/askme_makarov/templates/components/comment-item.html
@@ -11,7 +11,15 @@
         </div>
         <div class="g-4 d-flex">
             <div class="col-2">
-                <button class="btn btn-primary" data-bs-toggle="button" type="button">{{ comment.get_likes_count }}</button>
+                <i class="fas fa-arrow-down fa-lg"></i>
+                {% if comment.get_likes_count > 0 %}
+                    <span class="text-success mx-1">{{ comment.get_likes_count }}</span>
+                {% elif comment.get_likes_count < 0 %}
+                    <span class="text-danger mx-1">{{ comment.get_likes_count }}</span>
+                    {% else %}
+                    <span class="mx-1">{{ comment.get_likes_count }}</span>
+                {% endif %}
+                <i class="fas fa-arrow-up fa-lg "></i>
             </div>
             <div class="col-10">
                 <div class="form-check">
