--- a/askme_makarov/templates/question.html
+++ b/askme_makarov/templates/question.html
@@ -5,7 +5,6 @@
 {% endblock auth %}
 
 {% block content %}
-
 <div class="question-primary">
     <div class="row">
         <div class="row">
@@ -20,7 +19,15 @@
             </div>
             <div class="g-4 d-flex">
                 <div class="col-3">
-                    <button class="btn btn-primary" data-bs-toggle="button" type="button">{{ question.get_likes_count }}</button>
+                    <i class="fas fa-arrow-down fa-lg"></i>
+                    {% if question.get_likes_count > 0 %}
+                        <span class="text-success mx-1">{{ question.get_likes_count }}</span>
+                    {% elif question.get_likes_count < 0 %}
+                        <span class="text-danger mx-1">{{ question.get_likes_count }}</span>
+                        {% else %}
+                        <span class="mx-1">{{ question.get_likes_count }}</span>
+                    {% endif %}
+                    <i class="fas fa-arrow-up fa-lg "></i>
                 </div>
                  <div class="col-7 fs-5 program-lang">
                 Tags: {% for tag in question.tags.all %}
